<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EgyTour</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_age">Age</string>
    <string name="hint_nationality">Nationality</string>
    <string name="hint_number">Phone Number</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_maps">Map</string>
</resources>
